mitigate silent build failures for rhel and centos builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_9.cfg
@@ -22,7 +22,8 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash
+%pre --erroronfail --interpreter=/usr/bin/bash
+set -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -76,7 +77,8 @@ vim
 -iwl7260-firmware
 %end
 
-%post
+%post --erroronfail
+set -ex
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
@@ -105,7 +107,7 @@ shutdown -h now
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
@@ -200,8 +202,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
-set -x
+%post --nochroot --erroronfail --log=/dev/ttyS0
+set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
 
