--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10.cfg
@@ -21,7 +21,7 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash --erroronfail
+%pre --erroronfail --interpreter=/usr/bin/bash
 set -ex
 
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
@@ -226,7 +226,7 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0 --erroronfail
+%post --nochroot --erroronfail --log=/dev/ttyS0
 set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
