--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
@@ -21,7 +21,8 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash
+%pre --erroronfail --interpreter=/usr/bin/bash
+set -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -114,7 +115,7 @@ EOM
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 dnf config-manager --set-disabled google-cloud-cli
 dnf -y install google-rhui-client-rhel10
@@ -127,7 +128,7 @@ shutdown -h now
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
@@ -218,8 +219,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
-set -x
+%post --nochroot --erroronfail --log=/dev/ttyS0
+set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
 
