--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_6_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_6_sap_byos.cfg
@@ -20,7 +20,8 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash
+%pre --erroronfail --interpreter=/usr/bin/bash
+set -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -92,7 +93,8 @@ vim
 -zd1211-firmware
 %end
 
-%post
+%post --erroronfail
+set -ex
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
@@ -122,19 +124,20 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
-%post --log=/dev/ttyS0
+%post --erroronfail --log=/dev/ttyS0
+set -ex
 # Peg to RHEL 8.6
 echo "8.6" > /etc/dnf/vars/releasever
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 dnf -y install google-rhui-client-rhel8-sap
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 
 # Configure SAP HANA packages.
@@ -169,7 +172,7 @@ shutdown -h now
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
@@ -258,8 +261,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
-set -x
+%post --nochroot --erroronfail --log=/dev/ttyS0\nset -ex
+set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
 
