--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap_byos.cfg
@@ -20,7 +20,7 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash
+%pre --erroronfail --interpreter=/usr/bin/bash\nset -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -128,13 +128,13 @@ echo "8.8" > /etc/dnf/vars/releasever
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 dnf -y install google-rhui-client-rhel8-sap
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 
 # Configure SAP HANA packages.
@@ -169,7 +169,7 @@ shutdown -h now
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
@@ -258,8 +258,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
-set -x
+%post --nochroot --erroronfail --log=/dev/ttyS0\nset -ex
+set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
 
