--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_2_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_2_sap.cfg
@@ -20,7 +20,8 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --interpreter=/usr/bin/bash
+%pre --erroronfail --interpreter=/usr/bin/bash
+set -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -93,7 +94,8 @@ vim
 -zd1211-firmware
 %end
 
-%post
+%post --erroronfail
+set -ex
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
@@ -124,13 +126,14 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
 EOM
 %end
 
-%post --log=/dev/ttyS0
+%post --erroronfail --log=/dev/ttyS0
+set -ex
 # Peg to RHEL 9.2
 echo "9.2" > /etc/dnf/vars/releasever
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 dnf -y install google-rhui-client-rhel9-sap
 %end
@@ -142,7 +145,7 @@ shutdown -h now
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 
 # Configure SAP HANA packages.
@@ -172,7 +175,7 @@ dnf install -y ${SAP_PKGS}
 %end
 
 %post --erroronfail
-set -x
+set -ex
 exec &> /dev/ttyS0
 
 # Delete the dummy user account.
@@ -271,8 +274,8 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
-set -x
+%post --nochroot --erroronfail --log=/dev/ttyS0
+set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
 
