fix some typos for recent changes to adding error handling for image builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_6_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_6_sap_byos.cfg
@@ -261,7 +261,7 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --erroronfail --log=/dev/ttyS0\nset -ex
+%post --nochroot --erroronfail --log=/dev/ttyS0
 set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
