--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap.cfg
@@ -259,7 +259,7 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --erroronfail --log=/dev/ttyS0\nset -ex
+%post --nochroot --erroronfail --log=/dev/ttyS0
 set -ex
 rm -Rf /mnt/sysimage/tmp/*
 %end
