Update repo name references in kickstarts
This one gets confusing, because the repo is named "sdk" but the package is "cli"

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos.cfg
@@ -119,7 +119,7 @@ EOM
 %post --erroronfail
 set -ex
 exec &> /dev/ttyS0
-dnf config-manager --set-disabled google-cloud-cli
+dnf config-manager --set-disabled google-cloud-sdk
 dnf -y install google-rhui-client-rhel9
 %end
 
@@ -163,7 +163,7 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
 # Re-enable the cloud SDK repo
-dnf config-manager --set-enabled google-cloud-cli
+dnf config-manager --set-enabled google-cloud-sdk
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
 
