--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_byos.cfg
@@ -117,7 +117,7 @@ EOM
 %post --erroronfail
 set -ex
 exec &> /dev/ttyS0
-dnf config-manager --set-disabled google-cloud-cli
+dnf config-manager --set-disabled google-cloud-sdk
 dnf -y install google-rhui-client-rhel10
 %end
 
@@ -155,7 +155,7 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
 # Re-enable the cloud SDK repo
-dnf config-manager --set-enabled google-cloud-cli
+dnf config-manager --set-enabled google-cloud-sdk
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
 
