fix some more typos for recent changes to adding error handling for image builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_8_sap.cfg
@@ -20,7 +20,8 @@ user --name=gce --lock
 
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
-%pre --erroronfail --interpreter=/usr/bin/bash\nset -ex
+%pre --erroronfail --interpreter=/usr/bin/bash
+set -ex
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
