Remove RHUI packages from BYOS machines before completing the image

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap_byos.cfg
@@ -257,6 +257,9 @@ rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
 dnf clean all
 rm -fr /var/cache/dnf/*
 
+# Remove the RHUI package 
+dnf -y remove google-rhui-client-rhel9-sap
+
 # Blacklist the floppy module.
 echo "blacklist floppy" > /etc/modprobe.d/blacklist-floppy.conf
 restorecon /etc/modprobe.d/blacklist-floppy.conf
