--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_10_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_10_sap_byos.cfg
@@ -239,6 +239,9 @@ systemctl enable dnf-automatic.timer
 rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
   /etc/yum.repos.d/google-cloud-staging.repo
 
+# Remove the RHUI package 
+dnf -y remove google-rhui-client-rhel8-sap
+
 # Clean up the cache for smaller images.
 dnf clean all
 rm -fr /var/cache/dnf/*
