--- a/daisy_workflows/image_build/sqlserver/configs/sql_server_2025.ini
+++ b/daisy_workflows/image_build/sqlserver/configs/sql_server_2025.ini
@@ -1,29 +1,25 @@
-;SQL Server 2025 CTP2.0 Configuration File
+;SQL Server 2025 Configuration File
 [OPTIONS]
 
 ; Specifies a Setup work flow, like INSTALL, UNINSTALL, or UPGRADE. This is a required parameter. 
 
 ACTION="Install"
 
-; Accept SQL Server License terms.
-
-IACCEPTSQLSERVERLICENSETERMS="True"
-
-; By specifying this parameter and accepting Python terms, you acknowledge that you have read and understood the terms of use.
-
-IACCEPTPYTHONLICENSETERMS="False"
-
-; By specifying this parameter and accepting Microsoft R Open and Microsoft R Server terms, you acknowledge that you have read and understood the terms of use.
-
-IACCEPTROPENLICENSETERMS="False"
-
-; Specifies that SQL Server Setup should not display the privacy statement when ran from the command line.
-
-SUPPRESSPRIVACYSTATEMENTNOTICE="True"
-
 ; Use the /ENU parameter to install the English version of SQL Server on your localized Windows operating system. 
 
 ENU="True"
+
+; Accept SQL License Terms
+
+IAcceptSQLServerLicenseTerms="True"
+
+; Indicates whether the supplied product key is covered by Service Assurance. 
+
+PRODUCTCOVEREDBYSA="False"
+
+; Specifies that SQL Server Setup should not display the privacy statement when ran from the command line. 
+
+SUPPRESSPRIVACYSTATEMENTNOTICE="True"
 
 ; Setup will not display any user interface. 
 
@@ -53,9 +49,9 @@ SUPPRESSPAIDEDITIONNOTICE="True"
 
 UpdateSource="MU"
 
-; Specifies features to install, uninstall, or upgrade. The list of top-level features include SQL, AS, IS, MDS, and Tools. The SQL feature will install the Database Engine, Replication, Full-Text, and Data Quality Services (DQS) server. The Tools feature will install shared components. 
+; Specifies features to install, uninstall, or upgrade. The list of top-level features include SQL, AS, IS, DQ and MDS. The SQL feature will install the Database Engine, Replication, Full-Text, and Data Quality Services (DQS) server. 
 
-FEATURES=SQLENGINE,REPLICATION,DQ,AS,IS,Tools
+FEATURES=SQLENGINE,REPLICATION,ADVANCEDANALYTICS,FULLTEXT,AS,IS
 
 ; Displays the command line parameters usage. 
 
@@ -85,17 +81,33 @@ INSTANCEID="MSSQLSERVER"
 
 SQLTELSVCSTARTUPTYPE="Automatic"
 
+; Account for SQL Server CEIP service: Domain\User or system account. 
+
+SQLTELSVCACCT="NT Service\SQLTELEMETRY"
+
 ; Startup type for the SQL Server Analysis Services CEIP service. 
 
 ASTELSVCSTARTUPTYPE="Automatic"
+
+; Account for SQL Server Analysis Services CEIP service: Domain\User or system account. 
+
+ASTELSVCACCT="NT Service\SSASTELEMETRY"
 
 ; Startup type for the SQL Server Integration Services CEIP service. 
 
 ISTELSVCSTARTUPTYPE="Automatic"
 
+; Account for SQL Server Integration Services CEIP service: Domain\User or system account. 
+
+ISTELSVCACCT="NT Service\SSISTELEMETRY170"
+
 ; Specify the installation directory. 
 
 INSTANCEDIR="C:\Program Files\Microsoft SQL Server"
+
+; Agent account name. 
+
+AGTSVCACCOUNT="NT Service\SQLSERVERAGENT"
 
 ; Auto-start service after installation.  
 
@@ -104,6 +116,14 @@ AGTSVCSTARTUPTYPE="Manual"
 ; Startup type for Integration Services. 
 
 ISSVCSTARTUPTYPE="Automatic"
+
+; Account for Integration Services: Domain\User or system account. 
+
+ISSVCACCOUNT="NT Service\MsDtsServer170"
+
+; The name of the account that the Analysis Services service runs under. 
+
+ASSVCACCOUNT="NT Service\MSSQLServerOLAPService"
 
 ; Controls the service startup type setting after the service has been created. 
 
@@ -115,23 +135,23 @@ ASCOLLATION="Latin1_General_CI_AS"
 
 ; The location for the Analysis Services data files. 
 
-ASDATADIR="C:\Program Files\Microsoft SQL Server\MSAS16.MSSQLSERVER\OLAP\Data"
+ASDATADIR="C:\Program Files\Microsoft SQL Server\MSAS17.MSSQLSERVER\OLAP\Data"
 
 ; The location for the Analysis Services log files. 
 
-ASLOGDIR="C:\Program Files\Microsoft SQL Server\MSAS16.MSSQLSERVER\OLAP\Log"
+ASLOGDIR="C:\Program Files\Microsoft SQL Server\MSAS17.MSSQLSERVER\OLAP\Log"
 
 ; The location for the Analysis Services backup files. 
 
-ASBACKUPDIR="C:\Program Files\Microsoft SQL Server\MSAS16.MSSQLSERVER\OLAP\Backup"
+ASBACKUPDIR="C:\Program Files\Microsoft SQL Server\MSAS17.MSSQLSERVER\OLAP\Backup"
 
 ; The location for the Analysis Services temporary files. 
 
-ASTEMPDIR="C:\Program Files\Microsoft SQL Server\MSAS16.MSSQLSERVER\OLAP\Temp"
+ASTEMPDIR="C:\Program Files\Microsoft SQL Server\MSAS17.MSSQLSERVER\OLAP\Temp"
 
 ; The location for the Analysis Services configuration files. 
 
-ASCONFIGDIR="C:\Program Files\Microsoft SQL Server\MSAS16.MSSQLSERVER\OLAP\Config"
+ASCONFIGDIR="C:\Program Files\Microsoft SQL Server\MSAS17.MSSQLSERVER\OLAP\Config"
 
 ; Specifies whether or not the MSOLAP provider is allowed to run in process. 
 
@@ -145,7 +165,7 @@ ASSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS"
 
 ASSERVERMODE="MULTIDIMENSIONAL"
 
-; Startup type for the SQL Server service.
+; Startup type for the SQL Server service. 
 
 SQLSVCSTARTUPTYPE="Automatic"
 
@@ -164,6 +184,10 @@ ENABLERANU="False"
 ; Specifies a Windows collation or an SQL collation to use for the Database Engine. 
 
 SQLCOLLATION="SQL_Latin1_General_CP1_CI_AS"
+
+; Account for SQL Server service: Domain\User or system account. 
+
+SQLSVCACCOUNT="NT Service\MSSQLSERVER"
 
 ; Set to "True" to enable instant file initialization for SQL Server service. If enabled, Setup will grant Perform Volume Maintenance Task privilege to the Database Engine Service SID. This may lead to information disclosure as it could allow deleted content to be accessed by an unauthorized principal. 
 
@@ -193,7 +217,7 @@ SQLTEMPDBLOGFILESIZE="8"
 
 SQLTEMPDBLOGFILEGROWTH="64"
 
-; Provision current user as a Database Engine system administrator for SQL Server 2025 CTP2.0 Express. 
+; Provision current user as a Database Engine system administrator for SQL Server 2025 Express. 
 
 ADDCURRENTUSERASSQLADMIN="False"
 
@@ -209,6 +233,14 @@ NPENABLED="0"
 
 BROWSERSVCSTARTUPTYPE="Disabled"
 
+; User account for Launchpad Service. 
+
+EXTSVCACCOUNT="NT Service\MSSQLLaunchpad"
+
+; User account for Full-text Filter Daemon Host. 
+
+FTSVCACCOUNT="NT Service\MSSQLFDLauncher"
+
 ; Use SQLMAXMEMORY to minimize the risk of the OS experiencing detrimental memory pressure. 
 
 SQLMAXMEMORY="2147483647"
@@ -216,3 +248,4 @@ SQLMAXMEMORY="2147483647"
 ; Use SQLMINMEMORY to reserve a minimum amount of memory available to the SQL Server Memory Manager. 
 
 SQLMINMEMORY="0"
+
