Ensure the copy of the certificate is removed

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_byos.cfg
@@ -203,6 +203,7 @@ rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
 
 # Remove the RHUI package 
 dnf -y remove google-rhui-client-rhel8
+rm -fr /etc/pki/product/*
 
 # Clean up the cache for smaller images.
 dnf clean all
