--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_sap_byos.cfg
@@ -253,12 +253,13 @@ systemctl enable dnf-automatic.timer
 rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
   /etc/yum.repos.d/google-cloud-staging.repo
 
+# Remove the RHUI package 
+dnf -y remove google-rhui-client-rhel9-sap
+rm -fr /etc/pki/product/*
+
 # Clean up the cache for smaller images.
 dnf clean all
 rm -fr /var/cache/dnf/*
-
-# Remove the RHUI package 
-dnf -y remove google-rhui-client-rhel9-sap
 
 # Blacklist the floppy module.
 echo "blacklist floppy" > /etc/modprobe.d/blacklist-floppy.conf
