--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_eus_byos.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_4_eus_byos.cfg
@@ -220,6 +220,7 @@ rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
 
 # Remove the RHUI package 
 dnf -y remove google-rhui-client-rhel9-eus
+rm -fr /etc/pki/product/*
 
 # Clean up the cache for smaller images.
 dnf clean all
