--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_byos_arm64.cfg
@@ -210,6 +210,7 @@ rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
 
 # Remove the RHUI package 
 dnf -y remove google-rhui-client-rhel9
+rm -fr /etc/pki/product/*
 
 # Clean up the cache for smaller images.
 dnf clean all
