--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -70,18 +70,18 @@ steps:
   - --dockerfile=gce_windows_upgrade.Dockerfile
 
 # Copy Linux binaries to GCS
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', '/workspace/linux/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/linux/']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['storage', 'cp', '/workspace/linux/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/linux/']
 
 # Copy Windows binaries to GCS
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', '/workspace/windows/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/windows/']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['storage', 'cp', '/workspace/windows/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/windows/']
 
 # Copy OSX binaries to GCS
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', '/workspace/darwin/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/darwin/']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['storage', 'cp', '/workspace/darwin/*', 'gs://$_IMAGE_PROJECT/$_RELEASE/darwin/']
 
 
 # Make binaries world-readable.
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['-m', 'acl', '-r', 'ch', '-u', 'AllUsers:R', 'gs://$_IMAGE_PROJECT/$_RELEASE/*']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['storage', 'objects', 'update', 'gs://$_IMAGE_PROJECT/$_RELEASE/*', '--recursive', '--add-acl-grant=AllUsers:R']
