Fix openssh selinux context to ensure its labeled correctly as per new policies

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10.cfg
@@ -197,6 +197,9 @@ dracut -f --kver="${kver}"
 
 # Fix selinux contexts on /etc/resolv.conf.
 restorecon /etc/resolv.conf
+# Fix selinux contexts on openssh binaries.
+restorecon -Rv /usr/libexec/openssh
+
 %end
 
 # Cleanup.
