Parameterize the Daisy Kickstart Files

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
@@ -22,7 +22,15 @@ user --name=gce --lock
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
 %pre --erroronfail --interpreter=/usr/bin/bash
+#!/bin/sh
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
 
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
@@ -32,12 +40,41 @@ udevadm settle
 udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
-# build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"
+$(
+  if [ "${IS_ARM}" == "true" ]; then
+    echo 'bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="biosdevname=0"'
+  else
+    echo 'bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"'
+  fi
+)
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
-part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs
+$(
+  if [ "${IS_LVM}" == "true" ]; then
+    cat << LVM_CONF
+# EFI System Partition
+part /boot --fstype=xfs --size=1024 --ondisk=/dev/disk/by-id/google-el-install-disk
+# Create a single partition for LVM on the install disk, growing to fill the disk
+part pv.01 --fstype=lvmpv --grow --ondisk=/dev/disk/by-id/google-el-install-disk
+volgroup rootvg pv.01
+# Define Logical Volumes within 'rootvg'
+# Filesystem type is set to XFS for all logical volumes. Can be changed.
+# Logical Volume for / (root)
+logvol / --fstype=xfs --name=rootlv --vgname=rootvg --size=2048 # 2.0 GB
+# Logical Volume for /usr
+logvol /usr --fstype=xfs --name=usrlv --vgname=rootvg --size=10240 # 10.0 GB
+# Logical Volume for /var
+logvol /var --fstype=xfs --name=varlv --vgname=rootvg --size=8192 # 8.0 GB
+# Logical Volume for /tmp
+logvol /tmp --fstype=xfs --name=tmplv --vgname=rootvg --size=2048 # 2.0 GB
+# Logical Volume for /home
+logvol /home --fstype=xfs --name=homelv --vgname=rootvg --size=1024 # 1.0 GB
+LVM_CONF
+  else
+    echo 'part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs'
+  fi
+)
 EOM
 %end
 %include /tmp/disk-config
@@ -57,9 +94,6 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -99,20 +133,38 @@ vim
 
 %post --erroronfail
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
 
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+ARCH_UNDERSCORE="x86_64"
+ARCH_DASH="x86-64"
+if [ "${IS_ARM}" == "true" ]; then
+  ARCH_UNDERSCORE="aarch64"
+  ARCH_DASH="aarch64"
+fi
+
+REPO_FILE="/etc/yum.repos.d/google-cloud.repo"
+rm -f ${REPO_FILE} # Start clean
+
+cat >> ${REPO_FILE} << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-x86-64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el10-${ARCH_DASH}-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key-v10.gpg
 EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+cat >> ${REPO_FILE} << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-x86_64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el10-${ARCH_UNDERSCORE}
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -122,22 +174,106 @@ EOM
 
 %post --erroronfail
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
 
-exec &> /dev/ttyS0
-dnf -y install google-rhui-client-rhel10
-rpm -q google-rhui-client-rhel10
-%end
-
-# Google Compute Engine kickstart config for Enterprise Linux 10.
-%onerror
-echo "Build Failed!" > /dev/ttyS0
-shutdown -h now
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+if [ "${IS_EUS}" == "true" ] || [ "${IS_SAP}" == "true" ]; then
+    echo "${VERSION_LOCK}" > /etc/dnf/vars/releasever
+    if [ $? -eq 0 ]; then
+        echo "DEBUG: Releasever file written successfully."
+        cat /etc/dnf/vars/releasever
+    else
+        echo "ERROR: Failed to write releasever file."
+    fi
+fi
 %end
 
 %post --erroronfail
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
 
-exec &> /dev/ttyS0
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+dnf -y install "$RHUI_PACKAGE_NAME"
+if [ "$IS_BYOS" == "true" || "$IS_ARM" == "true" ]; then
+  rpm -q "$RHUI_PACKAGE_NAME"
+fi
+%end
+
+# Google Compute Engine kickstart config for Enterprise Linux 9.
+%onerror
+if [ "$IS_ARM" == "true" ]; then
+    echo "Build Failed!" > /dev/ttyAMA0
+else
+    echo "Build Failed!" > /dev/ttyS0
+fi
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+if [ "$IS_BYOS" == "true" ]; then
+  dnf config-manager --set-disabled google-cloud-sdk
+fi
+
+INSTALL_PKGS=()
+
+if [ "${IS_BYOS}" != "true" ]; then
+    INSTALL_PKGS+=(
+    subscription-manager
+    rhc
+    insights-client
+    )
+else
+    # Cloud SDK
+    dnf config-manager --set-enabled google-cloud-sdk
+fi
+
+if [ "${IS_LVM}" == "true" ]; then
+    INSTALL_PKGS+=(lvm2)
+else
+    INSTALL_PKGS+=(gce-disk-expand)
+fi
+
+# Base packages for all images
+INSTALL_PKGS+=(
+google-cloud-cli
+google-compute-engine
+google-osconfig-agent
+)
+
+UNIQUE_PKGS=($(echo "${INSTALL_PKGS[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
+
+if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
+    echo "DEBUG: Packages to install: ${UNIQUE_PKGS[@]}"
+    dnf -y install "${UNIQUE_PKGS[@]}"
+    rpm -q "${UNIQUE_PKGS[@]}"
+fi
+rpm -q google-cloud-cli
+%end
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
 
 # Delete the dummy user account.
 userdel -r gce
@@ -157,14 +293,6 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 [InstanceSetup]
 set_boto_config = false
 EOL
-
-# Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
-
-# Install the Cloud SDK package.
-dnf install -y google-cloud-cli
-rpm -q google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -208,6 +336,12 @@ systemctl enable dnf-automatic.timer
 # exist.
 rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
   /etc/yum.repos.d/google-cloud-staging.repo
+
+if [ "$IS_BYOS" == "true" ]; then 
+    # Remove the RHUI package 
+    dnf -y remove "$RHUI_PACKAGE_NAME"
+    rm -fr /etc/pki/product/*
+fi
 
 # Clean up the cache for smaller images.
 dnf clean all
