--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
@@ -21,7 +21,16 @@ user --name=gce --lock
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
 %pre --erroronfail --interpreter=/usr/bin/bash
+#!/bin/sh
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -36,6 +45,35 @@ bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --app
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
 part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs
+$(
+  if [ "${IS_LVM}" == "true" ]; then
+    cat << LVM_CONF
+# EFI System Partition
+part /boot/efi --fstype=efi --size=200 --ondisk=/dev/disk/by-id/google-el-install-disk
+# /boot partition
+part /boot --fstype=xfs --size=1024 --ondisk=/dev/disk/by-id/google-el-install-disk
+# Create a single partition for LVM on the install disk, growing to fill the disk
+part pv.01 --fstype=lvmpv --grow --ondisk=/dev/disk/by-id/google-el-install-disk
+# Define the Volume Group named 'rootvg' using the physical volume pv.01
+volgroup rootvg pv.01
+# Define Logical Volumes within 'rootvg'
+# Filesystem type is set to XFS for all logical volumes. Can be changed. 
+# Logical Volume for / (root)
+logvol / --fstype=xfs --name=rootlv --vgname=rootvg --size=2048  # 2.0 GB
+# Logical Volume for /usr
+logvol /usr --fstype=xfs --name=usrlv --vgname=rootvg --size=10240 # 10.0 GB
+# Logical Volume for /var
+logvol /var --fstype=xfs --name=varlv --vgname=rootvg --size=8192  # 8.0 GB
+# Logical Volume for /tmp
+logvol /tmp --fstype=xfs --name=tmplv --vgname=rootvg --size=2048  # 2.0 GB
+# Logical Volume for /home
+logvol /home --fstype=xfs --name=homelv --vgname=rootvg --size=1024  # 1.0 GB
+LVM_CONF
+  else
+    echo 'part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk'
+    echo 'part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs'
+  fi
+)
 EOM
 %end
 %include /tmp/disk-config
@@ -56,9 +94,6 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -98,42 +133,198 @@ vim
 
 %post --erroronfail
 set -ex
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+ARCH="x86_64"
+if [ "${IS_ARM}" == "true" ]; then
+  ARCH="aarch64"
+fi
+
+REPO_FILE="/etc/yum.repos.d/google-cloud.repo"
+rm -f ${REPO_FILE} # Start clean
+
+cat >> ${REPO_FILE} << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-${ARCH}-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+cat >> ${REPO_FILE} << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-${ARCH}
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
+
+if [ "${IS_SAP}" == "true" ]; then
+       cat >> ${REPO_FILE} << EOM
+       [google-cloud-sdk]
+       name=Google Cloud SDK
+       baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-${ARCH}
+       enabled=1
+       gpgcheck=1
+       repo_gpgcheck=0
+       gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+              https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+       EOM
+fi
+
 %end
+
 %post --erroronfail
 set -ex
-exec &> /dev/ttyS0
-dnf -y install google-rhui-client-rhel9
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+if [ "${IS_EUS}" == "true" ] || [ "${IS_SAP}" == "true" ]; then
+    echo "${VERSION_LOCK}" > /etc/dnf/vars/releasever
+    if [ $? -eq 0 ]; then
+        echo "DEBUG: Releasever file written successfully."
+        cat /etc/dnf/vars/releasever
+    else
+        echo "ERROR: Failed to write releasever file."
+    fi
+fi
+%end
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+dnf -y install "$RHUI_PACKAGE_NAME"
+if [ "$IS_BYOS" == "true" || "$IS_ARM" == "true" ]; then
+  rpm -q "$RHUI_PACKAGE_NAME"
+fi
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 9.
 %onerror
-echo "Build Failed!" > /dev/ttyS0
+if [ "$IS_ARM" == "true" ]; then
+    echo "Build Failed!" > /dev/ttyAMA0
+else
+    echo "Build Failed!" > /dev/ttyS0
+fi
+
 shutdown -h now
 %end
 
 %post --erroronfail
 set -ex
-exec &> /dev/ttyS0
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+if [ "$IS_BYOS" == "true" ] && [ "$IS_ARM" != "true" ] && [ "$IS_SAP" != "true" ]; then
+  dnf config-manager --set-disabled google-cloud-sdk
+fi
+
+INSTALL_PKGS=()
+
+if [ "${IS_BYOS}" != "true" ]; then
+    INSTALL_PKGS+=(subscription-manager)
+    if [ "${IS_SAP}" == "true" ]
+       if [ "${VERSION_LOCK}" != "9.0" ] && [ "${VERSION_LOCK}" != "9.2" ]; then
+              INSTALL_PKGS+=(
+              rhc
+              insights-client
+       fi
+    )
+    else
+       INSTALL_PKGS+=(
+       rhc
+       insights-client
+       )
+    fi
+else
+    # Cloud SDK
+    dnf config-manager --set-enabled google-cloud-sdk
+fi
+
+if [ "${IS_SAP}" == "true" ]; then
+   iNSTALL_PKGS+=(
+       chkconfig
+       compat-openssl11
+       fence-agents-gce
+       google-cloud-sap-agent
+       libatomic
+       libtool-ltdl
+       lvm2
+       numactl
+       numactl-libs
+       nfs-utils
+       pacemaker
+       pcs
+       resource-agents
+       resource-agents-gcp
+       resource-agents-sap
+       resource-agents-sap-hana
+       rhel-system-roles-sap
+       tuned-profiles-sap
+       tuned-profiles-sap-hana
+   )
+fi
+
+if [ "${IS_LVM}" == "true" ]; then
+    INSTALL_PKGS+=(lvm2)
+else
+    INSTALL_PKGS+=(gce-disk-expand)
+fi
+
+# Base packages for all images
+INSTALL_PKGS+=(
+google-cloud-cli
+google-compute-engine
+google-osconfig-agent
+)
+
+UNIQUE_PKGS=($(echo "${INSTALL_PKGS[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
+
+if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
+    echo "DEBUG: Packages to install: ${UNIQUE_PKGS[@]}"
+    dnf -y install "${UNIQUE_PKGS[@]}"
+    rpm -q "${UNIQUE_PKGS[@]}"
+fi
+rpm -q google-cloud-cli
+%end
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
 # Delete the dummy user account.
 userdel -r gce
 
@@ -158,14 +349,6 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 [InstanceSetup]
 set_boto_config = false
 EOL
-
-# Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
-rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
-
-# Install the Cloud SDK package.
-dnf install -y google-cloud-cli
-rpm -q google-cloud-cli
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -193,6 +376,11 @@ sed -i'' -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/
 # Update all packages.
 dnf -y update
 
+if [ "${IS_SAP}" == "true" ] %% [ "${IS_BYOS}" != "true" ]; then
+       # Remove subscription manager which is a weak dependency of the SAP specific packages.
+       dnf -y remove subscription-manager
+fi
+
 # If package update above involved a kernel package, it might not have properly set kernel command line
 # options, instead pulling from /proc/cmdline on the installer VM. Recreate boot loader options here.
 grub2-mkconfig
@@ -209,6 +397,12 @@ systemctl enable dnf-automatic.timer
 # exist.
 rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
   /etc/yum.repos.d/google-cloud-staging.repo
+
+if [ "$IS_BYOS" == "true" ]; then 
+    # Remove the RHUI package 
+    dnf -y remove "$RHUI_PACKAGE_NAME"
+    rm -fr /etc/pki/product/*
+fi
 
 # Clean up the cache for smaller images.
 dnf clean all
