--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
@@ -21,7 +21,16 @@ user --name=gce --lock
 ### Disk configuration.
 # Disk configuration is done by including a separate file with disk configuration, otherwise anaconda will try to validate that the disk exists before we configure udev rules.
 %pre --erroronfail --interpreter=/usr/bin/bash
+#!/bin/sh
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
 cp /run/install/isodir/65-gce-disk-naming.rules /etc/udev/rules.d/
 cp /run/install/isodir/google_nvme_id /usr/lib/udev/
 chmod +x /usr/lib/udev/google_nvme_id
@@ -34,8 +43,36 @@ tee -a /tmp/disk-config << EOM
 bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
-part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
-part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs
+
+$(
+  if [ "${IS_LVM}" == "true" ]; then
+    cat << LVM_CONF
+# EFI System Partition
+part /boot/efi --fstype=efi --size=200 --ondisk=/dev/disk/by-id/google-el-install-disk
+# /boot partition
+part /boot --fstype=xfs --size=1024 --ondisk=/dev/disk/by-id/google-el-install-disk
+# Create a single partition for LVM on the install disk, growing to fill the disk
+part pv.01 --fstype=lvmpv --grow --ondisk=/dev/disk/by-id/google-el-install-disk
+# Define the Volume Group named 'rootvg' using the physical volume pv.01
+volgroup rootvg pv.01
+# Define Logical Volumes within 'rootvg'
+# Filesystem type is set to XFS for all logical volumes. Can be changed. 
+# Logical Volume for / (root)
+logvol / --fstype=xfs --name=rootlv --vgname=rootvg --size=2048  # 2.0 GB
+# Logical Volume for /usr
+logvol /usr --fstype=xfs --name=usrlv --vgname=rootvg --size=10240 # 10.0 GB
+# Logical Volume for /var
+logvol /var --fstype=xfs --name=varlv --vgname=rootvg --size=8192  # 8.0 GB
+# Logical Volume for /tmp
+logvol /tmp --fstype=xfs --name=tmplv --vgname=rootvg --size=2048  # 2.0 GB
+# Logical Volume for /home
+logvol /home --fstype=xfs --name=homelv --vgname=rootvg --size=1024  # 1.0 GB
+LVM_CONF
+  else
+    echo 'part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk'
+    echo 'part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs'
+  fi
+)
 EOM
 %end
 %include /tmp/disk-config
@@ -56,9 +93,6 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -98,42 +132,186 @@ vim
 
 %post --erroronfail
 set -ex
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+%include /run/install/isodir/kickstart_vars.cfg
+
+ARCH="x86_64"
+if [ "${IS_ARM}" == "true" ]; then
+  ARCH="aarch64"
+fi
+
+REPO_FILE="/etc/yum.repos.d/google-cloud.repo"
+rm -f ${REPO_FILE} # Start clean
+
+cat >> ${REPO_FILE} << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-x86_64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-${ARCH}-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+
+cat >> ${REPO_FILE} << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-${ARCH}
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
+
+if [ "${IS_SAP}" == "true" ]; then
+       cat >> ${REPO_FILE} << EOM
+       [google-cloud-sdk]
+       name=Google Cloud SDK
+       baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
+       enabled=1
+       gpgcheck=1
+       repo_gpgcheck=0
+       gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+              https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+       EOM
+fi
 %end
+
 %post --erroronfail
 set -ex
-exec &> /dev/ttyS0
-dnf -y install google-rhui-client-rhel8
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+if [ "${IS_EUS}" == "true" ] || [ "${IS_SAP}" == "true" ]; then
+    echo "${VERSION_LOCK}" > /etc/dnf/vars/releasever
+    if [ $? -eq 0 ]; then
+        echo "DEBUG: Releasever file written successfully."
+        cat /etc/dnf/vars/releasever
+    else
+        echo "ERROR: Failed to write releasever file."
+    fi
+fi
+%end
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+dnf -y install "$RHUI_PACKAGE_NAME"
+if [ "$IS_BYOS" != "true" || "$IS_ARM" == "true" ]; then
+  # Disable the eclipse dnf module which doesn't exist for aarch64.
+  dnf -y module disable eclipse
+fi
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 8.
 %onerror
-echo "Build Failed!" > /dev/ttyS0
+if [ "$IS_ARM" == "true" ]; then
+    echo "Build Failed!" > /dev/ttyAMA0
+else
+    echo "Build Failed!" > /dev/ttyS0
+fi
+
 shutdown -h now
+%end
+
+
+%post --erroronfail
+set -ex
+%include /run/install/isodir/kickstart_vars.cfg
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
+INSTALL_PKGS=()
+
+
+UNIQUE_PKGS=($(echo "${INSTALL_PKGS[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
+
+if [ "${IS_ARM}" == "true" ]; then
+   iNSTALL_PKGS+=(nvme-cli)
+fi
+
+if [ "${IS_BYOS}" != "true" ]; then
+    INSTALL_PKGS+=(
+    subscription-manager
+    insights-client
+    )
+    if [ "${IS_SAP}" != "true" ] || [  "${VERSION_LOCK}" == "8.10" ]; then
+       INSTALL_PKGS+=(rhc)
+    fi
+else
+    if [ "${IS_ARM}" == "true" ]; then
+       INSTALL_PKGS+=(rhc)
+    fi
+fi
+
+if [ "${IS_SAP}" == "true" ]; then
+   iNSTALL_PKGS+=(
+       compat-sap-c++-9
+       fence-agents-gce
+       google-cloud-sap-agent
+       libatomic
+       libtool-ltdl
+       lvm2
+       numactl
+       numactl-libs
+       nfs-utils
+       pacemaker
+       pcs
+       resource-agents
+       resource-agents-gcp
+       resource-agents-sap
+       resource-agents-sap-hana
+       rhel-system-roles-sap
+       tuned-profiles-sap
+       tuned-profiles-sap-hana
+   )
+fi
+
+if [ "${IS_LVM}" == "true" ]; then
+    INSTALL_PKGS+=(lvm2)
+else
+    INSTALL_PKGS+=(gce-disk-expand)
+fi
+
+# Base packages for all images
+INSTALL_PKGS+=(
+google-cloud-cli
+google-compute-engine
+google-osconfig-agent
+)
+
+if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
+    echo "DEBUG: Packages to install: ${UNIQUE_PKGS[@]}"
+    dnf -y install "${UNIQUE_PKGS[@]}"
+    rpm -q "${UNIQUE_PKGS[@]}"
+fi
 %end
 
 %post --erroronfail
 set -ex
-exec &> /dev/ttyS0
+
+if [ "$IS_ARM" == "true" ]; then
+    exec &> /dev/ttyAMA0
+else
+    exec &> /dev/ttyS0
+fi
+
 # Delete the dummy user account.
 userdel -r gce
 
@@ -203,6 +381,12 @@ systemctl enable dnf-automatic.timer
 # exist.
 rm -f /etc/yum.repos.d/google-cloud-unstable.repo \
   /etc/yum.repos.d/google-cloud-staging.repo
+
+if [ "$IS_BYOS" == "true" ]; then 
+    # Remove the RHUI package 
+    dnf -y remove "$RHUI_PACKAGE_NAME"
+    rm -fr /etc/pki/product/*
+fi
 
 # Clean up the cache for smaller images.
 dnf clean all
