Fix missing google-cloud-sap package

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
@@ -166,9 +166,9 @@ EOM
 
 if [ "${IS_SAP}" == "true" ]; then
        cat >> ${REPO_FILE} << EOM
-       [google-cloud-sdk]
-       name=Google Cloud SDK
-       baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
+       [google-cloud-sap]
+       name=Google Cloud SAP
+       baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el8-x86_64
        enabled=1
        gpgcheck=1
        repo_gpgcheck=0
