--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
@@ -173,9 +173,9 @@ EOM
 
 if [ "${IS_SAP}" == "true" ]; then
        cat >> ${REPO_FILE} << EOM
-       [google-cloud-sdk]
-       name=Google Cloud SDK
-       baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-${ARCH}
+       [google-cloud-sap]
+       name=Google Cloud SAP
+       baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el9-x86_64
        enabled=1
        gpgcheck=1
        repo_gpgcheck=0
