Fixing RHEL consolidated Kickstart failure

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
@@ -208,13 +208,16 @@ if [ "$IS_BYOS" == "true" || "$IS_ARM" == "true" ]; then
 fi
 %end
 
-# Google Compute Engine kickstart config for Enterprise Linux 9.
+# Google Compute Engine kickstart config for Enterprise Linux 10.
 %onerror
 if [ "$IS_ARM" == "true" ]; then
     echo "Build Failed!" > /dev/ttyAMA0
 else
     echo "Build Failed!" > /dev/ttyS0
 fi
+
+shutdown -h now
+%end
 
 %post --erroronfail
 set -ex
