--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
@@ -165,16 +165,16 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
 EOM
 
 if [ "${IS_SAP}" == "true" ]; then
-       cat >> ${REPO_FILE} << EOM
-       [google-cloud-sap]
-       name=Google Cloud SAP
-       baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el8-x86_64
-       enabled=1
-       gpgcheck=1
-       repo_gpgcheck=0
-       gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-              https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-       EOM
+cat >> ${REPO_FILE} << EOM
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el8-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
 fi
 %end
 
@@ -209,7 +209,7 @@ else
 fi
 
 dnf -y install "$RHUI_PACKAGE_NAME"
-if [ "$IS_BYOS" != "true" || "$IS_ARM" == "true" ]; then
+if [ "$IS_ARM" == "true" ]; then
   # Disable the eclipse dnf module which doesn't exist for aarch64.
   dnf -y module disable eclipse
 fi
@@ -239,11 +239,8 @@ fi
 
 INSTALL_PKGS=()
 
-
-UNIQUE_PKGS=($(echo "${INSTALL_PKGS[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
-
 if [ "${IS_ARM}" == "true" ]; then
-   iNSTALL_PKGS+=(nvme-cli)
+   INSTALL_PKGS+=(nvme-cli)
 fi
 
 if [ "${IS_BYOS}" != "true" ]; then
@@ -251,7 +248,7 @@ if [ "${IS_BYOS}" != "true" ]; then
     subscription-manager
     insights-client
     )
-    if [ "${IS_SAP}" != "true" ] || [  "${VERSION_LOCK}" == "8.10" ]; then
+    if [ "${IS_SAP}" != "true" ] || [ "${VERSION_LOCK}" == "8.10" ]; then
        INSTALL_PKGS+=(rhc)
     fi
 else
@@ -261,7 +258,7 @@ else
 fi
 
 if [ "${IS_SAP}" == "true" ]; then
-   iNSTALL_PKGS+=(
+   INSTALL_PKGS+=(
        compat-sap-c++-9
        fence-agents-gce
        google-cloud-sap-agent
@@ -295,6 +292,8 @@ google-cloud-cli
 google-compute-engine
 google-osconfig-agent
 )
+
+UNIQUE_PKGS=($(echo "${INSTALL_PKGS[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' '))
 
 if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
     echo "DEBUG: Packages to install: ${UNIQUE_PKGS[@]}"
