--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
@@ -43,8 +43,6 @@ tee -a /tmp/disk-config << EOM
 bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
-part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
-part / --size=100 --grow --ondrive=/dev/disk/by-id/google-el-install-disk --label=root --fstype=xfs
 $(
   if [ "${IS_LVM}" == "true" ]; then
     cat << LVM_CONF
@@ -172,16 +170,16 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
 EOM
 
 if [ "${IS_SAP}" == "true" ]; then
-       cat >> ${REPO_FILE} << EOM
-       [google-cloud-sap]
-       name=Google Cloud SAP
-       baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el9-x86_64
-       enabled=1
-       gpgcheck=1
-       repo_gpgcheck=0
-       gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-              https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-       EOM
+cat >> ${REPO_FILE} << EOM
+[google-cloud-sap]
+name=Google Cloud SAP
+baseurl=https://packages.cloud.google.com/yum/repos/google-cloud-sap-agent-el9-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
 fi
 
 %end
@@ -250,13 +248,13 @@ INSTALL_PKGS=()
 
 if [ "${IS_BYOS}" != "true" ]; then
     INSTALL_PKGS+=(subscription-manager)
-    if [ "${IS_SAP}" == "true" ]
+    if [ "${IS_SAP}" == "true" ]; then
        if [ "${VERSION_LOCK}" != "9.0" ] && [ "${VERSION_LOCK}" != "9.2" ]; then
               INSTALL_PKGS+=(
               rhc
               insights-client
+              )
        fi
-    )
     else
        INSTALL_PKGS+=(
        rhc
